Fixed stacked tabs having padding on mobile

--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ a:hover {
 
 }
 
+ul {
+
+    padding: 0;
+
+}
+
 .nav-li.current a {
 
     color: white;
